mid/docs/grammar.ebnf
Program    ::= Statement*
Statement  ::= Block | LetStmt | AssignStmt | PrintStmt | IfStmt | WhileStmt
Block      ::= "{" Statement* "}"

LetStmt    ::= "let" Identifier "=" Expr ";"
AssignStmt ::= Identifier "=" Expr ";"
PrintStmt  ::= "print" "(" Expr ")" ";"

IfStmt     ::= "if" "(" Condition ")" Block ("else" Block)?
WhileStmt  ::= "while" "(" Condition ")" Block

Condition  ::= Expr ("==" | "<" | ">") Expr
Expr       ::= Term (("+" | "-") Term)*
Term       ::= Factor (("*" | "/") Factor)*
Factor     ::= Number | Identifier | "(" Expr ")"

Identifier ::= [a-zA-Z_][a-zA-Z0-9_]*
Number     ::= [0-9]+
